Support deletion of messages you sent (#9)
* feat: delete your messages

* fix: styling

* feat: hide title bar if PWA mode

* fix: borked styles

* fix: trashcan button

* fix: chat styling margins

* fix: leftover thread count not being passed

* fix: env example and favicon

* fix: styling consistent on PWA

* Revert "fix: styling consistent on PWA"

This reverts commit 29a04a448c82bd1d8e2f0ff52f0adb546134d753.
